refactor: Apply Google java format to Operate codebase (#6426)
* build: add spotless google java fmt

* refactor(schema): apply google java style

* refactor(qa): apply google java style

* refactor(archiver): apply google java style

* refactor(importer): apply google java style

* refactor(common): apply google java style

* refactor(data-generator): apply google java style

* refactor(importer-8_4): apply google java style

* refactor(importer-8_5): apply google java style

* refactor(importer-common): apply google java style

* refactor(webapp): apply google java style

* fix: remove extract semicolon

* refactor(qa): apply google java style

* feat: add intellij settings

To follow Zeebe guidelines adds intellij coding style configs
See https://github.com/camunda/zeebe/wiki/Code-Style#integration-with-intellij

* refactor: create profiles for spotless

 * New profile which is always active to reformat code
 * New profile to allow to check and validate code style; useful for CI

* ci: add format check job

Add additional step in the backend
-linting workflow to verify the
Google java checks